[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://nodes/Sun.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/House.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/TrashBin.tscn" type="PackedScene" id=4]
[ext_resource path="res://nodes/HomelessWithCart.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 84
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Sun" parent="." instance=ExtResource( 2 )]
position = Vector2( 1288.94, -450.799 )

[node name="House" parent="." instance=ExtResource( 3 )]
position = Vector2( 706.936, 600 )

[node name="TrashBin" parent="." instance=ExtResource( 4 )]
position = Vector2( 1219.45, 600.571 )

[node name="HomelessWithCart" parent="." instance=ExtResource( 5 )]
position = Vector2( 410, 600 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="DollarSign" type="Label" parent="HUD"]
margin_left = 37.0
margin_top = 29.0
margin_right = 70.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "$"

[node name="Score" type="Label" parent="HUD"]
margin_left = 83.0
margin_top = 30.0
margin_right = 311.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -523, 190 )
custom_fonts/font = SubResource( 2 )
text = "0.00"

[node name="GameOverOverlay" type="Control" parent="HUD"]
visible = false
margin_left = 322.5
margin_top = 252.5
margin_right = 362.5
margin_bottom = 292.5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOverOverlay"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GameOverText" type="Label" parent="HUD/GameOverOverlay/VBoxContainer"]
margin_right = 379.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( -523, 190 )
custom_fonts/font = SubResource( 3 )
text = "GAME OVER"

[node name="RestartText" type="Label" parent="HUD/GameOverOverlay/VBoxContainer"]
margin_top = 99.0
margin_right = 379.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( -523, 190 )
custom_fonts/font = SubResource( 4 )
text = "Press R to restart"
align = 1
[connection signal="trash_amount_changed" from="HomelessWithCart" to="." method="_on_HomelessWithCart_trash_amount_changed"]
